fix(hero): align content under logo instead of Contact button
- Change margin-left from auto to 0
- Set padding-left to 5% to match header padding
- Apply same fix to 1920px+ breakpoint

--- a/assets/scss/_hero.scss
+++ b/assets/scss/_hero.scss
@@ -44,13 +44,14 @@
 
   // ===== Content Block =====
   // Webflow: .div-block
+  // Aligned under the logo (header uses padding: 0 5%)
   &__content {
     position: relative;
     z-index: 1;
     margin-top: 60px;
-    margin-left: auto;
+    margin-left: 0;
     padding-top: 0;
-    padding-left: 60px;
+    padding-left: 5%; // Match header padding to align under logo
     padding-right: 0;
     color: $color-cream;
   }
@@ -88,9 +89,9 @@
       justify-content: flex-start;
       align-items: flex-start;
       margin-top: 100px;
-      margin-left: 50px;
+      margin-left: 0;
       padding-top: 0;
-      padding-left: 60px;
+      padding-left: 5%; // Match header padding to align under logo
       display: flex;
     }
 
